dist/src/main/kubernetes/many_instances/template/metasfresh-core-stack-service_template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.stage: "%STAGE%"
    de.metas.deployment.user: "%USER-ID%"
  name: "metasfresh-core-stack-%USER-ID%-%STAGE%"
  namespace: default
spec:
  selector:
    de.metas.deployment.name: "metasfresh-core-stack-%USER-ID%-%STAGE%"
  ports:
  - name: webapi-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: webapi-remote-debug
    port: 8789
    protocol: TCP
    targetPort: 8789    
  - name: webui-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: webui-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: activemq
    port: 61616
    protocol: TCP
    targetPort: 61616
  - name: app-http
    port: 8282
    protocol: TCP
    targetPort: 8282
  - name: app-remote-debug
    port: 8788
    protocol: TCP
    targetPort: 8788
  - name: db
    port: 5432
    protocol: TCP
    targetPort: 5432
  sessionAffinity: None
# loadbalancer doesn't work with minikube
  #  type: LoadBalancer
  type: NodePort
status:
  loadBalancer: {}
