dist/src/main/kubernetes/many_instances/template/metasfresh-core-stack-svc_template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.stage: "%STAGE%"
    de.metas.deployment.user: "%USER-ID%"
  name: "metasfresh-core-stack-%USER-ID%-%STAGE%"
  namespace: default
spec:
  ports:
  - name: webapi-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: webapi-remote-debug
    port: 8789
    protocol: TCP
    targetPort: 8789    
  - name: webui-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: webui-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: activemq
    port: 61616
    protocol: TCP
    targetPort: 61616
  - name: app-http
    port: 8282
    protocol: TCP
    targetPort: 8282
  - name: app-remote-debug
    port: 8788
    protocol: TCP
    targetPort: 8788
  - name: db
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    de.metas.deployment.stage: %STAGE%
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.user: %USER-ID%
  sessionAffinity: None
# ClusterIP is the default; using it because we don'T want to make the service available to the outside (we have the ingress for that)
# see https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types
  type: ClusterIP
status:
  loadBalancer: {}
